Están hechas las funcionalidades costo, valor nutricional y realizar

--- a/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
+++ b/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
@@ -16,7 +16,7 @@
        <ion-grid>
          <ion-row>
           <ion-col size-md="6" ion-align-self-center>
-             <ion-card>
+             <ion-card style="padding-top: 60px;">
                <ion-card-header>
                  <ion-title ion-text-center color="light">Iniciar Sesión</ion-title>
                </ion-card-header>
