--- a/bd-de-rechupe/src/app/pages/vn/vn.page.html
+++ b/bd-de-rechupe/src/app/pages/vn/vn.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/mainmenu"></ion-back-button>
     </ion-buttons>
-    <ion-button color="tertiary" slot="end" (click)="abrirModal()">Costos</ion-button>
+    <ion-button color="tertiary" slot="end" (click)="abrirModal()">Valor Nutricional</ion-button>
     <ion-title>Asignación</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -28,13 +28,6 @@
                 (ionBlur)="addValue(2, inputentry2, ingrediente.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
                 <ion-icon name="nutrition"></ion-icon>
               </ion-item>
-
-              <ion-item *ngFor="let materialexterno of materialesexternos; let i = index">
-                <ion-label class='fixedLabel'>{{ materialexterno.nombre }}</ion-label>
-                <ion-input #inputentry3 ngModel (keyup.enter)="addValue(3, inputentry3, materialexterno.id)"
-                (ionBlur)="addValue(3, inputentry3, materialexterno.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>                
-                <ion-icon name= "construct"> </ion-icon>
-              </ion-item>
             </ion-list>
           </ion-card-content>
         </ion-card>
@@ -42,4 +35,3 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-
