Hecha la función disponibilidad de temporada, crear materiales externos, agregar/desechar desde la ventana realizar, el menú principal contiene las opciones de mantenimiento en submenús y en costos se redondea al múltiplo de 5 más cercano para arriba

--- a/bd-de-rechupe/src/app/pages/mod-me/mod-me.page.html
+++ b/bd-de-rechupe/src/app/pages/mod-me/mod-me.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/ingreso"></ion-back-button>
+      <ion-back-button defaultHref="/mainmenu"></ion-back-button>
     </ion-buttons>
     <ion-title>Elegir Material Externo</ion-title>
   </ion-toolbar>
