--- a/bd-de-rechupe/src/app/pages/mainmenu/mainmenu.page.html
+++ b/bd-de-rechupe/src/app/pages/mainmenu/mainmenu.page.html
@@ -1,12 +1,13 @@
 <ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
-    <!-- <ion-button (click)="toggleMenu()">
+     <ion-button (click)="toggleMenu()" color="primary">
         <ion-icon slot="icon-only" name="menu"></ion-icon>
-      </ion-button>-->
-    <ion-menu-button color="primary" menu="mainmenu"></ion-menu-button>
+      </ion-button>
+  <!--  <ion-menu-button auto-hide="false" color="primary" menu="mainmenu"></ion-menu-button>-->
     </ion-buttons>
     <ion-title color="primary">Página Principal</ion-title>
+    <ion-button color="danger" slot="end" (click)="onCerrarSesion()">Salir</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -17,15 +18,39 @@
         <ion-title>Menú Principal</ion-title>
       </ion-toolbar>
     </ion-header>
+
     <ion-content>
-      <ion-list>
-        <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
-          <ion-item [routerLink]="page.url">
-            <ion-icon color="primary" slot="start" [name]="page.icon"></ion-icon>
-            <ion-label>{{ page.title }}</ion-label> 
+      <div *ngFor="let p of pages">
+      
+        <ion-menu-toggle auto-hide="false" *ngIf="p.url">
+          <ion-item [routerLink]="p.url" routerDirection="root" routerLinkActive="active">
+            <ion-icon color="primary" [name]="p.icon" slot="start"></ion-icon>
+            <ion-label>
+              {{ p.title }}
+            </ion-label> 
           </ion-item>
         </ion-menu-toggle>
-      </ion-list>
+        <ion-item button *ngIf="p.children?.length > 0" (click)="p.open = !p.open"
+          [class.active-parent]="p.open" detail="false"> 
+          <ion-icon slot="start" name="arrow-forward" *ngIf="!p.open"></ion-icon>
+          <ion-icon slot="start" name="arrow-down" *ngIf="p.open"></ion-icon>
+          <ion-label>
+            {{ p.title }}
+          </ion-label>
+        </ion-item>
+
+        <ion-list *ngIf="p.open">
+          <ion-menu-toggle>
+            <ion-item class="sub-item" *ngFor="let sub of p.children" [routerLink]="sub.url"
+             routerDirection="root" routerLinkActive="active">
+             <ion-icon [name]="sub.icon" slot="start"></ion-icon>
+             <ion-label>
+              {{ sub.title }}
+            </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </div>
     </ion-content>
   </ion-menu>
 
