--- a/bd-de-rechupe/src/app/pages/realizar/realizar.page.html
+++ b/bd-de-rechupe/src/app/pages/realizar/realizar.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/mainmenu"></ion-back-button>
     </ion-buttons>
-    <ion-button color="tertiary" slot="end" (click)="onDecidirModal()">¿Es la orden posible?</ion-button>
+    <ion-button color="tertiary" slot="end" (click)="onDecidirModal(1)">¿Es la orden posible?</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -15,8 +15,8 @@
           <ion-card-content>
             <ion-list>
               <ion-toolbar color="light">
-                <ion-button color="secondary" slot="start">Desechar Ord.</ion-button>
-                <ion-button color="secondary" slot="end">Agregar Ord.</ion-button>
+                <ion-button color="secondary" slot="start" (click)="onAgregarCantidades()">Agregar ítems</ion-button>
+                <ion-button color="secondary" slot="end" (click)="onDecidirModal(2)">Desechar ítems</ion-button>
               </ion-toolbar>
                 <ion-item *ngFor="let receta of recetas; let i = index">
                   <ion-label class='fixedLabel'>{{ receta.nombre }}</ion-label>
@@ -35,7 +35,7 @@
               <ion-item *ngFor="let materialexterno of materialesexternos; let i = index">
                 <ion-label class='fixedLabel'>{{ materialexterno.nombre }}</ion-label>
                 <ion-input #inputentry3 ngModel (keyup.enter)="addValue(3, inputentry3, materialexterno.id)"
-                (ionBlur)="addValue(3, inputentry3, materialexterno.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>                
+                (ionBlur)="addValue(3, inputentry3, materialexterno.id)" color="primary" placeholder="0" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))$" minlength="1" maxlength="13"></ion-input>                
                 <ion-icon name= "construct"> </ion-icon>
               </ion-item>
             </ion-list>
