--- a/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
+++ b/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
@@ -13,14 +13,12 @@
     <body>
      <ion-button (click)="irRegistro()">Registrarse</ion-button>
      <form #form="ngForm" (ngSubmit)="onIngresar(form)">
-       <ion-grid>
+       <ion-grid style="padding-top: 40px;">
          <ion-row>
           <ion-col size-md="6" ion-align-self-center>
-             <ion-card style="padding-top: 60px;">
-               <ion-card-header>
-                 <ion-title ion-text-center color="light">Iniciar Sesión</ion-title>
-               </ion-card-header>
+             <ion-card>
                <ion-card-content>
+                <ion-title ion-text-center color="dark">Iniciar Sesión</ion-title>
                  <ion-list>
                    <ion-item>
                      <ion-label position="floating">Correo: </ion-label>
