--- a/bd-de-rechupe/src/app/pages/registro/registro.page.html
+++ b/bd-de-rechupe/src/app/pages/registro/registro.page.html
@@ -8,31 +8,42 @@
 </ion-header>
 
 <ion-content>
-  <form #form="ngForm" (ngSubmit)="onRegistrarUsuario(form)">
-    <ion-grid>
-      <ion-row>
-        <ion-col size-md="6" ion-align-self-center>
-          <ion-card>
-            <ion-card-content>
-              <ion-item>
-                <ion-input ngModel required name="name" placeholder="Apodo" type="text" pattern="^(?![\s.0-9]+$)[a-zA-Z\s.0-9].{1,31}$" minlength="1" maxlength="31"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input ngModel required name="email" placeholder="Correo" type="email" pattern="^[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})$" minlength="3" maxlength="254"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input ngModel required name="password" placeholder="Contraseña de usuario" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.].{7,10}$" minlength="8" maxlength="10"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input ngModel required name="confirm" placeholder="Confirmar contraseña" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.].{7,10}$" minlength="8" maxlength="10"></ion-input>
-              </ion-item>
-              <div class="ion-padding">
-                <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
-              </div>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+  <body>
+    <form #form="ngForm" (ngSubmit)="onRegistrarUsuario(form)">
+      <ion-grid style="padding-top: 60px;">
+        <ion-row>
+          <ion-col size-md="6" ion-align-self-center>
+            <ion-card>
+              <ion-card-content>
+                <ion-item>
+                  <ion-input ngModel required name="name" placeholder="Apodo" type="text" pattern="^(?![\s.0-9]+$)[a-zA-Z\s.0-9].{1,31}$" minlength="1" maxlength="31"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-input ngModel required name="email" placeholder="Correo" type="email" pattern="^[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})$" minlength="3" maxlength="254"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-input ngModel required name="password" placeholder="Contraseña de usuario" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.].{7,10}$" minlength="8" maxlength="10"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-input ngModel required name="confirm" placeholder="Confirmar contraseña" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.].{7,10}$" minlength="8" maxlength="10"></ion-input>
+                </ion-item>
+                <div class="ion-padding">
+                  <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
+                </div>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </body>
 </ion-content>
+
+<style>
+  body {
+    background-image: url('../assets/images/alfajores.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  </style>
