--- a/bd-de-rechupe/src/app/pages/costo/costo.page.html
+++ b/bd-de-rechupe/src/app/pages/costo/costo.page.html
@@ -18,14 +18,14 @@
                 <ion-item *ngFor="let receta of recetas; let i = index">
                   <ion-label class='fixedLabel'>{{ receta.nombre }}</ion-label>
                   <ion-input #inputentry ngModel (keyup.enter)="addValue(1, inputentry, receta.id)"
-                  (ionBlur)="addValue(1, inputentry, receta.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                  (ionBlur)="addValue(1, inputentry, receta.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
                   <ion-icon name="logo-buffer"></ion-icon>               
                 </ion-item>  
             
               <ion-item *ngFor="let ingrediente of ingredientes; let i = index">
                 <ion-label class='fixedLabel'>{{ ingrediente.nombre }}</ion-label>
                 <ion-input #inputentry2 ngModel (keyup.enter)="addValue(2, inputentry2, ingrediente.id)"
-                (ionBlur)="addValue(2, inputentry2, ingrediente.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                (ionBlur)="addValue(2, inputentry2, ingrediente.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
                 <ion-icon name="nutrition"></ion-icon>
               </ion-item>
 
