--- a/bd-de-rechupe/src/app/pages/crear-ing/crear-ing.page.html
+++ b/bd-de-rechupe/src/app/pages/crear-ing/crear-ing.page.html
@@ -16,7 +16,7 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating">Nombre</ion-label>
-                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![\s.0-9]+$)[a-zA-Z\s.0-9].{1,31}$" minlength="1" maxlength="31"></ion-input>
+                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-Z .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Precio de referencia (₡)</ion-label>
@@ -24,39 +24,39 @@
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Peso de referencia (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="peso" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="peso" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>           
               <ion-item>
                 <ion-label position="floating">Peso disponible (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="peso_disp" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="peso_disp" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Energía (Kcal)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="energia" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="energia" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Proteína (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="proteina" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="proteina" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Grasa (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="grasa" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="grasa" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Carbohidratos (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="carbohidratos" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="carbohidratos" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Fibra (g)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="fibra" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="fibra" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Colesterol (mg)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="colesterol" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="colesterol" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Sodio (mg)</ion-label>
-                <ion-input placeholder="0" type="text" ngModel required name="sodio" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))[.]{1}[0-9]{2}$" minlength="4" maxlength="13"></ion-input>
+                <ion-input placeholder="0" type="text" ngModel required name="sodio" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <div class="ion-padding">
                 <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Crear Ingrediente</ion-button>
