--- a/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
+++ b/bd-de-rechupe/src/app/pages/ingreso/ingreso.page.html
@@ -26,7 +26,7 @@
                    </ion-item>
                    <ion-item>
                      <ion-label position="floating">Contraseña: </ion-label>
-                     <ion-input pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.].{7,10}$" minlength="8" maxlength="10" type="password" ngModel required name="password"></ion-input>
+                     <ion-input pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&.])[A-Za-z\d$@$!%*?&.]{8,}$" minlength="8" maxlength="10" type="password" ngModel required name="password"></ion-input>
                    </ion-item>
                    <div class="ion-padding">
                      <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Ingresar</ion-button>
