--- a/bd-de-rechupe/src/app/pages/mod-me/mod-me-detail/mod-me-detail.page.html
+++ b/bd-de-rechupe/src/app/pages/mod-me/mod-me-detail/mod-me-detail.page.html
@@ -15,11 +15,11 @@
           <ion-card-content>
             <ion-item>
               <ion-label position="floating">Nombre</ion-label>
-              <ion-input placeholder="{{loadedMaterialExterno.nombre}}" type="text" [(ngModel)]="inputmodmenombre" pattern="^(?![\s.0-9]+$)[a-zA-Z\s.0-9].{1,31}$" minlength="1" maxlength="31"></ion-input>
+              <ion-input placeholder="{{loadedMaterialExterno.nombre}}" type="text" [(ngModel)]="inputmodmenombre" pattern="^(?![ .0-9]+$)[a-zA-Z .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Marca</ion-label>
-              <ion-input placeholder="{{loadedMaterialExterno.marca}}" type="text" [(ngModel)]="inputmodmemarca" pattern="^(?![\s]+$)[a-zA-Z\s.0-9$!%?&].{1,31}$" minlength="1" maxlength="31"></ion-input>
+              <ion-input placeholder="{{loadedMaterialExterno.marca}}" type="text" [(ngModel)]="inputmodmemarca" pattern="^(?![ ]+$)[a-zA-Z .0-9$!%?&]{1,}$" minlength="1" maxlength="31"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Precio de referencia (₡)</ion-label>
