Se agregaron botones para ver u ocultar el password en ingreso y registro. Se agregó un botón que permite ver las cantidades actuales en realizar. Ahora se puede determinar la disponibilidad temporal de las recetas

--- a/bd-de-rechupe/src/app/pages/crear-ing/crear-ing.page.html
+++ b/bd-de-rechupe/src/app/pages/crear-ing/crear-ing.page.html
@@ -16,7 +16,7 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating">Nombre</ion-label>
-                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-Z .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
+                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Precio de referencia (₡)</ion-label>
