--- a/bd-de-rechupe/src/app/pages/elim-rct/elim-rct-detail/elim-rct-detail.page.html
+++ b/bd-de-rechupe/src/app/pages/elim-rct/elim-rct-detail/elim-rct-detail.page.html
@@ -21,7 +21,7 @@
 
               <ion-item-divider color="secondary" sticky="true">
                 <ion-label style="font-size:20px;">
-                  Subrecetas
+                  Subrecetas (porción)
                 </ion-label>
               </ion-item-divider>
                 <ion-item *ngFor="let entrada1 of clonerctrcts; let i = index">
@@ -32,7 +32,7 @@
 
                 <ion-item-divider color="secondary" sticky="true">
                   <ion-label style="font-size:20px">
-                    Ingredientes
+                    Ingredientes (g)
                   </ion-label>
                 </ion-item-divider>             
               <ion-item *ngFor="let entrada2 of clonerctings; let i = index">
@@ -43,7 +43,7 @@
 
               <ion-item-divider color="secondary" sticky="true">
                 <ion-label style="font-size:20px">
-                  Materiales Externos
+                  Materiales Externos (uds.)
                 </ion-label>
               </ion-item-divider> 
               <ion-item *ngFor="let entrada3 of clonerctmtes; let i = index">
