--- a/bd-de-rechupe/src/app/pages/elim-rct/elim-rct.page.html
+++ b/bd-de-rechupe/src/app/pages/elim-rct/elim-rct.page.html
@@ -15,6 +15,11 @@
         <ion-card>
           <ion-card-content>
             <ion-list>
+              <ion-item-divider color="secondary" sticky="true">
+                <ion-label style="font-size:20px;">
+                  Recetas
+                </ion-label>
+              </ion-item-divider>
               <ion-item *ngFor="let receta of recetas | filtro: textoBuscar: 'nombre': 'id'" [routerLink]="['./', receta.id]">
                 <ion-label>{{ receta.nombre }}</ion-label>
                 <ion-icon name= "logo-buffer"> </ion-icon>
