--- a/bd-de-rechupe/src/app/pages/costo/costo.page.html
+++ b/bd-de-rechupe/src/app/pages/costo/costo.page.html
@@ -15,13 +15,23 @@
         <ion-card>
           <ion-card-content>
             <ion-list>
+              <ion-item-divider color="secondary" sticky="true">
+                <ion-label style="font-size:20px;">
+                  Recetas (porción)
+                </ion-label>
+              </ion-item-divider>
                 <ion-item *ngFor="let receta of recetas; let i = index">
                   <ion-label class='fixedLabel'>{{ receta.nombre }}</ion-label>
                   <ion-input #inputentry ngModel (keyup.enter)="addValue(1, inputentry, receta.id)"
                   (ionBlur)="addValue(1, inputentry, receta.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
                   <ion-icon name="logo-buffer"></ion-icon>               
                 </ion-item>  
-            
+
+                <ion-item-divider color="secondary" sticky="true">
+                  <ion-label style="font-size:20px;">
+                    Ingredientes (g)
+                  </ion-label>
+                </ion-item-divider>                
               <ion-item *ngFor="let ingrediente of ingredientes; let i = index">
                 <ion-label class='fixedLabel'>{{ ingrediente.nombre }}</ion-label>
                 <ion-input #inputentry2 ngModel (keyup.enter)="addValue(2, inputentry2, ingrediente.id)"
@@ -29,6 +39,11 @@
                 <ion-icon name="nutrition"></ion-icon>
               </ion-item>
 
+              <ion-item-divider color="secondary" sticky="true">
+                <ion-label style="font-size:20px;">
+                  Materiales Externos (uds.)
+                </ion-label>
+              </ion-item-divider>              
               <ion-item *ngFor="let materialexterno of materialesexternos; let i = index">
                 <ion-label class='fixedLabel'>{{ materialexterno.nombre }}</ion-label>
                 <ion-input #inputentry3 ngModel (keyup.enter)="addValue(3, inputentry3, materialexterno.id)"
