--- a/bd-de-rechupe/src/app/pages/crear-me/crear-me.page.html
+++ b/bd-de-rechupe/src/app/pages/crear-me/crear-me.page.html
@@ -16,11 +16,11 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating">Nombre</ion-label>
-                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-Z .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
+                <ion-input placeholder="Nombre" type="text" ngModel required name="nombre" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Marca</ion-label>
-                <ion-input placeholder="Marca" type="text" ngModel required name="marca" pattern="^(?![ ]+$)[a-zA-Z .0-9$!%?&]{1,}$" minlength="1" maxlength="31"></ion-input>
+                <ion-input placeholder="Marca" type="text" ngModel required name="marca" pattern="^(?![ ]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜâêîôûÂÊÎÔÛàèìòùÀÈÌÒÙ .0-9$!%?&]{1,}$" minlength="1" maxlength="31"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Precio de referencia (₡)</ion-label>
