--- a/bd-de-rechupe/src/app/pages/crear-rct/crear-rct.page.html
+++ b/bd-de-rechupe/src/app/pages/crear-rct/crear-rct.page.html
@@ -17,7 +17,7 @@
               <ion-item>
                 <ion-label position="floating" style="font-size:20px;">Nombre Receta</ion-label>
                 <ion-input #inputnombre ngModel (keyup.enter)="addNombre(inputnombre)"
-                (ionBlur)="addNombre(inputnombre)" color="primary" placeholder="{{ clonerctnombre }}" type="text" pattern="^(?![ .0-9]+$)[a-zA-Z .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>  
+                (ionBlur)="addNombre(inputnombre)" color="primary" placeholder="{{ clonerctnombre }}" type="text" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>  
               </ion-item>
             </ion-list>
           </ion-card-content>
