--- a/bd-de-rechupe/src/app/pages/realizar/realizar.page.html
+++ b/bd-de-rechupe/src/app/pages/realizar/realizar.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/mainmenu"></ion-back-button>
     </ion-buttons>
+    <ion-button color="tertiary" (click)="onValorActual()">Actual</ion-button>
     <ion-button color="tertiary" slot="end" (click)="onDecidirModal(1)">¿Es la orden posible?</ion-button>
   </ion-toolbar>
 </ion-header>
@@ -15,16 +16,26 @@
           <ion-card-content>
             <ion-list>
               <ion-toolbar color="light">
-                <ion-button color="secondary" slot="start" (click)="onAgregarCantidades()">Agregar ítems</ion-button>
-                <ion-button color="secondary" slot="end" (click)="onDecidirModal(2)">Desechar ítems</ion-button>
+                <ion-button color="tertiary" slot="start" (click)="onAgregarCantidades()">Agregar ítems</ion-button>
+                <ion-button color="tertiary" slot="end" (click)="onDecidirModal(2)">Desechar ítems</ion-button>
               </ion-toolbar>
+              <ion-item-divider color="secondary" sticky="true">
+                <ion-label style="font-size:20px;">
+                  Recetas (porción)
+                </ion-label>
+              </ion-item-divider>
                 <ion-item *ngFor="let receta of recetas; let i = index">
                   <ion-label class='fixedLabel'>{{ receta.nombre }}</ion-label>
                   <ion-input #inputentry ngModel (keyup.enter)="addValue(1, inputentry, receta.id)"
                   (ionBlur)="addValue(1, inputentry, receta.id)" color="primary" placeholder="0.00" type="text" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
                   <ion-icon name="logo-buffer"></ion-icon>               
                 </ion-item>  
-            
+
+                <ion-item-divider color="secondary" sticky="true">
+                  <ion-label style="font-size:20px;">
+                    Ingredientes (g)
+                  </ion-label>
+                </ion-item-divider> 
               <ion-item *ngFor="let ingrediente of ingredientes; let i = index">
                 <ion-label class='fixedLabel'>{{ ingrediente.nombre }}</ion-label>
                 <ion-input #inputentry2 ngModel (keyup.enter)="addValue(2, inputentry2, ingrediente.id)"
@@ -32,6 +43,11 @@
                 <ion-icon name="nutrition"></ion-icon>
               </ion-item>
 
+              <ion-item-divider color="secondary" sticky="true">
+                <ion-label style="font-size:20px;">
+                  Materiales Externos (uds.)
+                </ion-label>
+              </ion-item-divider>               
               <ion-item *ngFor="let materialexterno of materialesexternos; let i = index">
                 <ion-label class='fixedLabel'>{{ materialexterno.nombre }}</ion-label>
                 <ion-input #inputentry3 ngModel (keyup.enter)="addValue(3, inputentry3, materialexterno.id)"
