--- a/bd-de-rechupe/src/app/pages/mod-ing/mod-ing-detail/mod-ing-detail.page.html
+++ b/bd-de-rechupe/src/app/pages/mod-ing/mod-ing-detail/mod-ing-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/mainmenu"></ion-back-button>
+      <ion-back-button defaultHref="/mod-ing"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ loadedIngrediente.nombre }}</ion-title>
     <ion-button color="tertiary" slot="end" (click)="onSeleccionarmeses()">Selecciona los meses</ion-button>
@@ -17,11 +17,11 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating">Nombre</ion-label>
-                <ion-input placeholder="{{ loadedIngrediente.nombre }}" type="text" ngModel name="nombre" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>
+                <ion-input value="{{ loadedIngrediente.nombre }}" type="text" ngModel name="nombre" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="62"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Precio de referencia (₡)</ion-label>
-                <ion-input placeholder="{{ loadedIngrediente.precio }}" type="text" ngModel name="precio" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))$" minlength="1" maxlength="13"></ion-input>
+                <ion-input placeholder="{{ loadedIngrediente.precio }}" type="text" ngModel name="precio" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">Peso de referencia (g)</ion-label>
@@ -40,11 +40,11 @@
                 <ion-input placeholder="{{ loadedIngrediente.proteina }}" type="text" ngModel name="proteina" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="floating">Grasa (g)</ion-label>
+                <ion-label position="floating">Grasa Total (g)</ion-label>
                 <ion-input placeholder="{{ loadedIngrediente.grasa }}" type="text" ngModel name="grasa" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="floating">Carbohidratos (g)</ion-label>
+                <ion-label position="floating">Carbohidratos Totales (g)</ion-label>
                 <ion-input placeholder="{{ loadedIngrediente.carbohidratos }}" type="text" ngModel name="carbohidratos" pattern="^(([1-9]{1}[0-9]{0,})|([0]{1}))([.]{1}[0-9]{1,})?$" minlength="1" maxlength="13"></ion-input>
               </ion-item>
               <ion-item>
