--- a/bd-de-rechupe/src/app/pages/elim-me/elim-me-detail/elim-me-detail.page.html
+++ b/bd-de-rechupe/src/app/pages/elim-me/elim-me-detail/elim-me-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/mod-me"></ion-back-button>
+      <ion-back-button defaultHref="/elim-me"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ loadedMaterialExterno.nombre }}</ion-title>
   </ion-toolbar>
