--- a/bd-de-rechupe/src/app/pages/mod-rct/mod-rct-detail/mod-rct-detail.page.html
+++ b/bd-de-rechupe/src/app/pages/mod-rct/mod-rct-detail/mod-rct-detail.page.html
@@ -17,7 +17,7 @@
               <ion-item>
                 <ion-label position="floating" style="font-size:20px;">Nombre Receta</ion-label>
                 <ion-input #inputnombre ngModel (keyup.enter)="addNombre(inputnombre)"
-                (ionBlur)="addNombre(inputnombre)" color="primary" placeholder="{{ clonerctnombre }}" type="text" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="31"></ion-input>  
+                (ionBlur)="addNombre(inputnombre)" color="primary" value="{{ clonerctnombre }}" type="text" pattern="^(?![ .0-9]+$)[a-zA-ZñÑáéíóúÁÉÍÓÚäëïöüÄËÏÖÜ .0-9]{1,}$" minlength="1" maxlength="62"></ion-input>  
               </ion-item>
 
               <ion-item-divider color="secondary" sticky="true">
